# Rust-Rhythms-Pro---Egui-Edition

./: Cargo.toml  README.md
src/: audio.rs  bottom_panel.rs  equalizer copy.rs  equalizer.rs  main.rs  playlist.rs  styles.rs  theme.rs  ui.rs  visualizer.rs
